COMPLETE-- March 2020 calendar

--- a/index.html
+++ b/index.html
@@ -3,22 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header-primary">
         <span class="header__year">2020</span>
         <span class="header__month">March</span>
     </div>
 
-    <div class="days">
-        <div class="day">Mon</div>
-        <div class="day">Tue</div>
-        <div class="day">Wed</div>
-        <div class="day">Thu</div>
-        <div class="day">Fri</div>
-        <div class="day">Sat</div>
-        <div class="day">Sun</div>
+    <div class="week-days">
+        <div class="week-day">Sun</div>
+        <div class="week-day">Mon</div>
+        <div class="week-day">Tue</div>
+        <div class="week-day">Wed</div>
+        <div class="week-day">Thu</div>
+        <div class="week-day">Fri</div>
+        <div class="week-day">Sat</div>
     </div>
+
+    <div class="month-days">
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+    </div>  
 </body>
+<script src="index.js"></script>
 </html>
