WIP-- header year and month

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header-primary">
-        <span class="header__year">2020</span>
-        <span class="header__month">March</span>
+        <span class="header__year"></span>
+        <span class="header__month"></span>
     </div>
 
     <div class="week-days">
